// Vitest Snapshot v1

exports[`Rate > Rate baseVue demo works fine 1`] = `
<t-rate
  default-value="3"
/>
`;

exports[`Rate > Rate customVue demo works fine 1`] = `
<t-rate
  count="7"
/>
`;

exports[`Rate > Rate iconVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-rate />
  <t-rate />
  <t-rate
    allow-half=""
    color="var(--td-error-color-7)"
  />
</t-space>
`;

exports[`Rate > Rate sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    16px
  </h3>
  <t-rate
    size="16px"
  />
  <h3>
    24px
  </h3>
  <t-rate />
</t-space>
`;

exports[`Rate > Rate statusVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <h3>
    未评分状态
  </h3>
  <t-rate />
  <h3>
    满分状态
  </h3>
  <t-rate />
  <h3>
    半星状态
  </h3>
  <t-rate
    allow-half=""
  />
</t-space>
`;

exports[`Rate > Rate textsVue demo works fine 1`] = `
<t-rate
  show-text=""
/>
`;
